# spoonlee1

./: .gitignore  CSAPP  data.txt  emptyFile  index.html  morestuff.txt  original.txt  readme.md  wow.md
.github/: copilot-instructions.md
C_language/: helloworld
Core/: myCSCore.md
Data_Analysis/Kedro/projects/p1-hello-demo/: README.md  pyproject.toml
Data_Analysis/Kedro/projects/p1-hello-demo/conf/base/: catalog.yml  parameters_data_processing.yml
Data_Analysis/Kedro/projects/p1-hello-demo/src/p1_hello_demo/: __init__.py  __main__.py  readme.md  settings.py
Data_Analysis/Kedro/projects/p1-hello-demo/src/p1_hello_demo/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
Data_Analysis/Kedro/projects/p1-hello-demo/tests/pipelines/data_processing/: test_pipeline.py
Git_manual/: readme.md
ITCareer/: myITCareer.md
JR/: JR.md
JR_Lesson/: JR_lesson.md
JR_Projects/: JR_projects.md
JR_web_project/: index.html
JS_lesson/: JS_lesson1.js  index.html
Java_leetcode_problems/: prob206.java
MarkDown/: algorithm.md  readme.md
Udemy/: udemy.md
Web_Dev/: myFullStack.md  myITCareer.md
Web_Projects/: myWebProjects.md
algorithm_zuo/: readme.md
front_end_project/: index.html  style.css
fullStack/: README.MD  fullStack.md  myFullStack.md  myJavaVscodeTemplate.json
javaCore/: code2_2_localdate.java
leetcode_geek/: entry03.c
lesson5/: index.html  style.css
mySQL/: README.md
programming_templates/: myJava.json
project1/: index.html
python/: assign_func.py  lesson2.py  test1.py
python_OOB/: Animal_class.py  Animal_instance.py
(+3540 files in other folders)
